RESOLVED FIXED31275
Fix Chromium's Posix VFS implementation by adding the required 'unused file descriptor' logic
https://bugs.webkit.org/show_bug.cgi?id=31275
Summary Fix Chromium's Posix VFS implementation by adding the required 'unused file d...
Dumitru Daniliuc
Reported 2009-11-09 14:53:26 PST
The default SQLite VFS for Linux assumes that it might not always be able to close file descriptors. Therefore, it stores them in an "unused file descriptor" field of the sqlite3_file structure. That field is populated in the in xDlOpen() function. Ignoring that logic in Chromium's implementation resulted in a crash (dereferencing a NULL pointer). We need to fix that.
Attachments
patch (3.12 KB, patch)
2009-11-09 15:14 PST, Dumitru Daniliuc
no flags
patch (3.20 KB, patch)
2009-11-11 13:29 PST, Dumitru Daniliuc
dglazkov: review+
dumi: commit-queue-
patch (3.62 KB, patch)
2009-11-11 15:25 PST, Dumitru Daniliuc
dglazkov: review+
dumi: commit-queue-
Dumitru Daniliuc
Comment 1 2009-11-09 15:14:31 PST
Created attachment 42809 [details] patch Please do not commit-queue+ this patch. I will manually commit it once the Chromium-side patch that it depends on is in.
Eric Seidel (no email)
Comment 2 2009-11-09 17:44:29 PST
Comment on attachment 42809 [details] patch No need to set cq? if you don't want it commit-queued. :) You can also explicitly set cq-.
Dumitru Daniliuc
Comment 3 2009-11-11 13:29:05 PST
Created attachment 42995 [details] patch SQLite function names changed.
Dumitru Daniliuc
Comment 4 2009-11-11 15:25:49 PST
Created attachment 43011 [details] patch Function names changed once again.
Dimitri Glazkov (Google)
Comment 5 2009-11-11 21:48:19 PST
Comment on attachment 43011 [details] patch wow, shess is sure giving you hard time ;)
Dumitru Daniliuc
Comment 6 2009-11-11 21:58:49 PST
Landed as r50867.
Note You need to log in before you can comment on or make changes to this bug.