Fixing Chromium's POSIX VFS implementation, by adding the required "used file descriptors" logic.

Reviewed by Dimitri Glazkov.

https://bugs.webkit.org/show_bug.cgi?id=31275

* platform/sql/chromium/SQLiteFileSystemChromiumPosix.cpp:



Canonical link: https://commits.webkit.org/42296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50867 268f45cc-cd09-0410-ab3c-d52691b4dbfc